Fixed text overflow in API Documentation pages by adding word-warp property

--- a/static/css/layout/index.less
+++ b/static/css/layout/index.less
@@ -15,6 +15,9 @@ div#contentBody {
   img {
     max-width: 100%;
   }
+  p {
+    word-wrap: break-word;
+  }
 }
 .section,
 section {
